--- a/Rule.ini
+++ b/Rule.ini
@@ -19,7 +19,7 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]香港`[]原生`[]台湾`[]美国`[]新加坡`[]DIRECT
+custom_proxy_group=Proxies`select`[]香港`[]日本`[]原生`[]台湾`[]美国`[]新加坡`[]DIRECT
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT
@@ -35,6 +35,7 @@ custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
 custom_proxy_group=美国`select`(洛杉矶|费利蒙|西雅图|圣何塞)
 custom_proxy_group=香港`url-test`(^((?!原生).)*香港((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=日本`url-test`(^((?!原生).)*日本((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=台湾`url-test`(台湾)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=新加坡`url-test`(新加坡)`http://www.gstatic.com/generate_204`600,,100
