--- a/Rules.ini
+++ b/Rules.ini
@@ -19,7 +19,7 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]香港`[]新加坡`[]台湾原生`[]香港原生`[]新加坡原生`[]日本`[]美国`[]韩国`[]亚洲`[]欧洲`[]澳洲`[]南美`[]印度`[]游戏`[]DIRECT
+custom_proxy_group=Proxies`select`[]香港`[]日本`[]美国`[]新加坡`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]俄罗斯`[]韩国`[]亚洲`[]欧洲`[]澳洲`[]南美`[]印度`[]游戏`[]DIRECT
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT
@@ -27,19 +27,21 @@ custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
 custom_proxy_group=GMedia`select`[]Proxies`[]美国`[]韩国`[]欧洲`[]澳洲
-custom_proxy_group=Netflix`select`[]台湾原生`[]香港原生`[]新加坡原生
-custom_proxy_group=Telegram`select`[]Proxies`[]台湾原生`[]香港原生
-custom_proxy_group=PayPal`select`[]美国`[]DIRECT
+custom_proxy_group=Netflix`select`[]香港原生`[]台湾原生`[]新加坡原生
+custom_proxy_group=Telegram`select`[]Proxies`[]香港原生`[]台湾原生
+custom_proxy_group=PayPal`select`[]美国原生`[]DIRECT
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
 custom_proxy_group=香港`url-test`(^((?!原生|游戏).)*香港((?!原生|游戏).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=日本`url-test`(^((?!原生|游戏).)*日本((?!原生|游戏).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=美国`url-test`(^((?!原生|游戏).)*香港((?!原生|游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=新加坡`url-test`(^((?!原生|游戏).)*新加坡((?!原生|游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=美国原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=日本`url-test`(^((?!游戏).)*日本((?!游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=美国`url-test`(^((?!游戏).)*美国((?!游戏).)*$)`http://www.gstatic.com/generate_204`600,,200
+custom_proxy_group=俄罗斯`url-test`(俄罗斯)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=韩国`url-test`(^((?!游戏).)*韩国((?!游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=亚洲`url-test`(亚洲)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=欧洲`url-test`(欧洲)`http://www.gstatic.com/generate_204`600,,100
