--- a/Rules.ini
+++ b/Rules.ini
@@ -41,7 +41,7 @@ custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://w
 custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=美国原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=俄罗斯`url-test`(俄罗斯)`http://www.gstatic.com/generate_204`600,,100
+custom_proxy_group=俄罗斯`url-test`(^((?!游戏).)*俄罗斯((?!游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=韩国`url-test`(^((?!游戏).)*韩国((?!游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=亚洲`url-test`(亚洲)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=欧洲`url-test`(欧洲)`http://www.gstatic.com/generate_204`600,,100
