--- a/Rules.ini
+++ b/Rules.ini
@@ -19,7 +19,7 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]香港`[]日本`[]美国`[]新加坡`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]俄罗斯`[]韩国`[]亚洲`[]欧洲`[]澳洲`[]南美`[]印度`[]游戏`[]DIRECT
+custom_proxy_group=Proxies`select`[]香港`[]日本`[]美国`[]新加坡`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]俄罗斯`[]韩国`[]亚洲`[]欧洲`[]澳洲`[]南美`[]印度`[]DIRECT
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT
@@ -33,20 +33,19 @@ custom_proxy_group=PayPal`select`[]美国原生`[]DIRECT
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
-custom_proxy_group=香港`url-test`(^((?!原生|游戏).)*香港((?!原生|游戏).)*$)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=日本`url-test`(^((?!原生|游戏).)*日本((?!原生|游戏).)*$)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=美国`url-test`(^((?!原生|游戏).)*香港((?!原生|游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=新加坡`url-test`(^((?!原生|游戏).)*新加坡((?!原生|游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=美国原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=俄罗斯`url-test`(^((?!游戏).)*俄罗斯((?!游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=韩国`url-test`(^((?!游戏).)*韩国((?!游戏).)*$)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=亚洲`url-test`(亚洲)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=欧洲`url-test`(欧洲)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=澳洲`url-test`(澳洲)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=南美`url-test`(南美)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=印度`url-test`(印度)`http://www.gstatic.com/generate_204`600,,100
-custom_proxy_group=游戏`select`(游戏)
+custom_proxy_group=香港`url-test`(^((?!原生).)*香港((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=日本`url-test`(^((?!原生).)*日本((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=美国`url-test`(^((?!原生).)*香港((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=新加坡`url-test`(^((?!原生).)*新加坡((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=美国原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=俄罗斯`url-test`(俄罗斯)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=韩国`url-test`(韩国)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=亚洲`url-test`(亚洲)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=欧洲`url-test`(欧洲)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=澳洲`url-test`(澳洲)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=南美`url-test`(南美)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=印度`url-test`(印度)`http://www.gstatic.com/generate_204`600,,50
 ;设置分组标志位
