--- a/Rules.ini
+++ b/Rules.ini
@@ -27,7 +27,7 @@ custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
 custom_proxy_group=GMedia`select`[]Proxies`[]美国`[]韩国`[]欧洲`[]澳洲
-custom_proxy_group=Netflix`select`[]香港原生`[]台湾原生`[]新加坡原生
+custom_proxy_group=Netflix`select`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]日本
 custom_proxy_group=Telegram`select`[]Proxies`[]香港原生`[]台湾原生
 custom_proxy_group=PayPal`select`[]美国原生`[]DIRECT
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
@@ -39,7 +39,7 @@ custom_proxy_group=美国`url-test`(^((?!原生).)*美国((?!原生).)*$)`http:/
 custom_proxy_group=新加坡`url-test`(^((?!原生).)*新加坡((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=美国原生`url-test`(^(?=.*美国)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=美国原生`url-test`(^(?=.*美国)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,100
 custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=俄罗斯`url-test`(俄罗斯)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=韩国`url-test`(韩国)`http://www.gstatic.com/generate_204`600,,50
