--- a/Rules.ini
+++ b/Rules.ini
@@ -1,3 +1,7 @@
+[custom]
+enable_rule_generator=true
+overwrite_original_rules=true
+
 ;设置规则标志位
 ruleset=DIRECT,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/LAN.list
 ruleset=DIRECT,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Download.list
