--- a/Rules.ini
+++ b/Rules.ini
@@ -19,7 +19,7 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]香港`[]日本`[]美国`[]新加坡`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]俄罗斯`[]韩国`[]亚洲`[]欧洲`[]澳洲`[]南美`[]印度`[]DIRECT
+custom_proxy_group=Proxies`select`[]香港`[]日本`[]美国`[]新加坡`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]俄罗斯`[]韩国`[]印度`[]亚洲`[]欧洲`[]澳洲`[]南美`[]DIRECT
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT
