--- a/Rules.ini
+++ b/Rules.ini
@@ -34,7 +34,7 @@ custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
 custom_proxy_group=香港`url-test`(^((?!原生).)*香港((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=日本`url-test`(^((?!原生).)*日本((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=日本`url-test`(日本)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=美国`url-test`(^((?!原生).)*美国((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=新加坡`url-test`(^((?!原生).)*新加坡((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
