--- a/Rules.ini
+++ b/Rules.ini
@@ -19,26 +19,27 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]香港`[]日本`[]美国`[]新加坡`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]俄罗斯`[]韩国`[]印度`[]亚洲`[]欧洲`[]澳洲`[]南美`[]DIRECT
+custom_proxy_group=Proxies`select`[]香港`[]日本`[]美国`[]新加坡`[]香港原生`[]台湾原生`[]日本原生`[]美国原生`[]新加坡原生`[]俄罗斯`[]韩国`[]印度`[]亚洲`[]欧洲`[]澳洲`[]南美`[]DIRECT
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
-custom_proxy_group=GMedia`select`[]Proxies`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生
-custom_proxy_group=Netflix`select`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]日本
-custom_proxy_group=Telegram`select`[]Proxies`[]香港原生`[]台湾原生
+custom_proxy_group=GMedia`select`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]Proxies
+custom_proxy_group=Netflix`select`[]香港原生`[]台湾原生`[]日本原生`[]美国原生`[]新加坡原生
+custom_proxy_group=Telegram`select`[]香港原生`[]台湾原生`[]Proxies
 custom_proxy_group=PayPal`select`[]美国原生`[]DIRECT
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
 custom_proxy_group=香港`url-test`(^((?!原生).)*香港((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=日本`url-test`(日本)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=日本`url-test`(^((?!原生).)*日本((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=美国`url-test`(^((?!原生).)*美国((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=新加坡`url-test`(^((?!原生).)*新加坡((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=日本原生`url-test`(^(?=.*日本)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=美国原生`url-test`(^(?=.*美国)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=俄罗斯`url-test`(俄罗斯)`http://www.gstatic.com/generate_204`600,,50
