--- a/Rules.ini
+++ b/Rules.ini
@@ -26,9 +26,9 @@ custom_proxy_group=Others`select`[]Proxies`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
-custom_proxy_group=GMedia`select`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生`[]Proxies
+custom_proxy_group=GMedia`select`[]香港原生`[]台湾原生`[]美国原生`[]新加坡原生
 custom_proxy_group=Netflix`select`[]香港原生`[]台湾原生`[]日本原生`[]美国原生`[]新加坡原生
-custom_proxy_group=Telegram`select`[]香港原生`[]台湾原生`[]Proxies
+custom_proxy_group=Telegram`select`[]香港原生`[]台湾原生
 custom_proxy_group=PayPal`select`[]美国原生`[]DIRECT
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
