--- a/Rules.ini
+++ b/Rules.ini
@@ -8,6 +8,7 @@ ruleset=Speedtest,https://raw.githubusercontent.com/iduorami/Clash/master/Rulese
 ruleset=Microsoft,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Microsoft.list
 ruleset=Domestic,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Domestic.list
 ruleset=Telegram,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Telegram.list
+ruleset=Disney,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Disney.list
 ruleset=Netflix,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Netflix.list
 ruleset=Scholar,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Scholar.list
 ruleset=PayPal,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/PayPal.list
@@ -26,7 +27,8 @@ custom_proxy_group=Others`select`[]Proxies`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
-custom_proxy_group=GMedia`select`[]香港原生`[]台湾原生`[]日本原生`[]美国原生`[]新加坡原生
+custom_proxy_group=GMedia`select`[]Proxies`[]DIRECT
+custom_proxy_group=Disney`select`[]香港原生`[]台湾原生`[]日本原生`[]美国原生`[]新加坡原生
 custom_proxy_group=Netflix`select`[]香港原生`[]台湾原生`[]日本原生`[]美国原生`[]新加坡原生
 custom_proxy_group=Telegram`select`[]香港原生`[]台湾原生
 custom_proxy_group=PayPal`select`[]美国原生`[]DIRECT
@@ -41,7 +43,7 @@ custom_proxy_group=新加坡`url-test`(^((?!原生).)*新加坡((?!原生).)*$)`
 custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=日本原生`url-test`(^(?=.*日本)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=美国原生`url-test`(^(?=.*美国)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=美国原生`select`(^(?=.*美国)(?=.*原生).*$)
 custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=俄罗斯`url-test`(俄罗斯)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=韩国`url-test`(韩国)`http://www.gstatic.com/generate_204`600,,50
