--- a/Rules.ini
+++ b/Rules.ini
@@ -39,9 +39,9 @@ custom_proxy_group=亚洲`url-test`(亚洲)`http://www.gstatic.com/generate_204`
 custom_proxy_group=香港`url-test`(^((?!原生).)*香港((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=日本`url-test`(^((?!原生).)*日本((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=日本`select`(^((?!原生).)*日本((?!原生).)*$)
 custom_proxy_group=日本原生`select`(^(?=.*日本)(?=.*原生).*$)
-custom_proxy_group=美国`url-test`(^((?!原生).)*美国((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=美国`select`(^((?!原生).)*美国((?!原生).)*$)
 custom_proxy_group=美国原生`select`(^(?=.*美国)(?=.*原生).*$)
 custom_proxy_group=新加坡`url-test`(^((?!原生).)*新加坡((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
