--- a/Rules.ini
+++ b/Rules.ini
@@ -39,16 +39,16 @@ custom_proxy_group=亚洲`url-test`(亚洲)`http://www.gstatic.com/generate_204`
 custom_proxy_group=香港`url-test`(^((?!原生).)*香港((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=香港原生`url-test`(^(?=.*香港)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=台湾原生`url-test`(^(?=.*台湾)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=新加坡`url-test`(^((?!原生).)*新加坡((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=日本`select`(^((?!原生).)*日本((?!原生).)*$)
 custom_proxy_group=日本原生`select`(^(?=.*日本)(?=.*原生).*$)
 custom_proxy_group=美国`select`(^((?!原生).)*美国((?!原生).)*$)
 custom_proxy_group=美国原生`select`(^(?=.*美国)(?=.*原生).*$)
-custom_proxy_group=新加坡`url-test`(^((?!原生).)*新加坡((?!原生).)*$)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=新加坡原生`url-test`(^(?=.*新加坡)(?=.*原生).*$)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=俄罗斯`url-test`(俄罗斯)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=韩国`url-test`(韩国)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=印度`url-test`(印度)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=欧洲`url-test`(欧洲)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=澳洲`url-test`(澳洲)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=南美`url-test`(南美)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=俄罗斯`select`(俄罗斯)
+custom_proxy_group=韩国`select`(韩国)
+custom_proxy_group=印度`select`(印度)
+custom_proxy_group=欧洲`select`(欧洲)
+custom_proxy_group=澳洲`select`(澳洲)
+custom_proxy_group=南美`select`(南美)
 ;设置分组标志位
