--- a/Rules.ini
+++ b/Rules.ini
@@ -20,7 +20,7 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]香港`[]台湾`[]美国`[]日本`[]新加坡
+custom_proxy_group=Proxies`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT
@@ -37,7 +37,7 @@ custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
 custom_proxy_group=香港`url-test`(香港)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=台湾`url-test`(台湾)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=美国`select`(美国)
 custom_proxy_group=日本`url-test`(日本)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=美国`select`(美国)
 custom_proxy_group=新加坡`url-test`(新加坡)`http://www.gstatic.com/generate_204`600,,50
 ;设置分组标志位
