--- a/Rules.ini
+++ b/Rules.ini
@@ -23,7 +23,7 @@ ruleset=Others,[]MATCH
 custom_proxy_group=Proxies`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
-custom_proxy_group=Others`select`[]Proxies`[]DIRECT
+custom_proxy_group=Others`select`[]DIRECT`[]Proxies
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
