--- a/Rules.ini
+++ b/Rules.ini
@@ -28,8 +28,8 @@ custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
 custom_proxy_group=GMedia`select`[]Proxies`[]DIRECT
-custom_proxy_group=Disney`select`[]香港`[]台湾`[]日本`[]新加坡
-custom_proxy_group=Netflix`select`[]香港`[]台湾`[]日本`[]新加坡
+custom_proxy_group=Disney`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡
+custom_proxy_group=Netflix`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡
 custom_proxy_group=Telegram`select`[]香港`[]台湾
 custom_proxy_group=PayPal`select`[]美国`[]DIRECT
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
@@ -38,6 +38,6 @@ custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
 custom_proxy_group=香港`url-test`(香港)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=台湾`url-test`(台湾)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=日本`url-test`(日本)`http://www.gstatic.com/generate_204`600,,50
-custom_proxy_group=美国`select`(美国)
+custom_proxy_group=美国`url-test`(美国)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=新加坡`url-test`(新加坡)`http://www.gstatic.com/generate_204`600,,50
 ;设置分组标志位
