--- a/Rules.ini
+++ b/Rules.ini
@@ -28,8 +28,8 @@ custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
 custom_proxy_group=GMedia`select`[]Proxies`[]DIRECT
-custom_proxy_group=Disney`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡
-custom_proxy_group=Netflix`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡
+custom_proxy_group=Disney`select`[]香港`[]台湾`[]美国`[]新加坡
+custom_proxy_group=Netflix`select`[]香港`[]台湾`[]美国`[]新加坡
 custom_proxy_group=Telegram`select`[]香港`[]台湾
 custom_proxy_group=PayPal`select`[]美国`[]DIRECT
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
