--- a/Rules.ini
+++ b/Rules.ini
@@ -20,23 +20,23 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡
+custom_proxy_group=Proxies`select`[]台湾`[]香港`[]日本`[]美国`[]新加坡
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
-custom_proxy_group=Others`select`[]DIRECT`[]Proxies
+custom_proxy_group=Others`select`[]Proxies`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
 custom_proxy_group=GMedia`select`[]Proxies`[]DIRECT
-custom_proxy_group=Disney`select`[]香港`[]台湾`[]美国`[]新加坡
-custom_proxy_group=Netflix`select`[]香港`[]台湾`[]美国`[]新加坡
-custom_proxy_group=Telegram`select`[]香港`[]台湾
+custom_proxy_group=Disney`select`[]台湾`[]香港`[]美国`[]新加坡
+custom_proxy_group=Netflix`select`[]台湾`[]香港`[]美国`[]新加坡
+custom_proxy_group=Telegram`select`[]台湾`[]香港
 custom_proxy_group=PayPal`select`[]美国`[]DIRECT
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
-custom_proxy_group=香港`url-test`(香港)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=台湾`url-test`(台湾)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=香港`url-test`(香港)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=日本`url-test`(日本)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=美国`url-test`(美国)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=新加坡`url-test`(新加坡)`http://www.gstatic.com/generate_204`600,,50
