--- a/Rules.ini
+++ b/Rules.ini
@@ -4,15 +4,15 @@ ruleset=DIRECT,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/D
 ruleset=AdBlock,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/AdBlock.list
 ruleset=Apple,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Apple.list
 ruleset=Steam,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Steam.list
-ruleset=Speedtest,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Speedtest.list
-ruleset=Microsoft,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Microsoft.list
+ruleset=CMedia,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/CMedia.list
 ruleset=Domestic,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Domestic.list
+ruleset=Microsoft,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Microsoft.list
+ruleset=Speedtest,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Speedtest.list
 ruleset=Telegram,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Telegram.list
 ruleset=Disney,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Disney.list
 ruleset=Netflix,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Netflix.list
 ruleset=Scholar,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Scholar.list
 ruleset=PayPal,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/PayPal.list
-ruleset=CMedia,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/CMedia.list
 ruleset=GMedia,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/GMedia.list
 ruleset=Proxies,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Proxy.list
 ruleset=Domestic,[]GEOIP,CN
@@ -20,7 +20,7 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]台湾`[]香港`[]日本`[]美国`[]新加坡
+custom_proxy_group=Proxies`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT
@@ -28,15 +28,15 @@ custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
 custom_proxy_group=GMedia`select`[]Proxies`[]DIRECT
-custom_proxy_group=Disney`select`[]台湾`[]香港`[]美国`[]新加坡
-custom_proxy_group=Netflix`select`[]台湾`[]香港`[]美国`[]新加坡
-custom_proxy_group=Telegram`select`[]台湾`[]香港
+custom_proxy_group=Disney`select`[]香港`[]台湾`[]美国`[]新加坡
+custom_proxy_group=Netflix`select`[]香港`[]台湾`[]美国`[]新加坡
+custom_proxy_group=Telegram`select`[]香港`[]台湾
 custom_proxy_group=PayPal`select`[]美国`[]DIRECT
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
-custom_proxy_group=台湾`url-test`(台湾)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=香港`url-test`(香港)`http://www.gstatic.com/generate_204`600,,50
+custom_proxy_group=台湾`url-test`(台湾)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=日本`url-test`(日本)`http://www.gstatic.com/generate_204`600,,50
 custom_proxy_group=美国`url-test`(美国)`http://www.gstatic.com/generate_204`600,,300
 custom_proxy_group=新加坡`url-test`(新加坡)`http://www.gstatic.com/generate_204`600,,50
