--- a/Rules.ini
+++ b/Rules.ini
@@ -9,10 +9,10 @@ ruleset=Domestic,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset
 ruleset=Microsoft,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Microsoft.list
 ruleset=Speedtest,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Speedtest.list
 ruleset=Telegram,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Telegram.list
+ruleset=PayPal,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/PayPal.list
+ruleset=Google,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Google.list
 ruleset=Disney,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Disney.list
 ruleset=Netflix,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Netflix.list
-ruleset=Scholar,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Scholar.list
-ruleset=PayPal,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/PayPal.list
 ruleset=GMedia,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/GMedia.list
 ruleset=Proxies,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Proxy.list
 ruleset=Domestic,[]GEOIP,CN
@@ -20,18 +20,18 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡
+custom_proxy_group=Proxies`select`[]香港`[]台湾`[]日本`[]美国`[]新加坡`.*
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
-custom_proxy_group=Scholar`select`[]Proxies`[]DIRECT
 custom_proxy_group=Others`select`[]Proxies`[]DIRECT
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
 custom_proxy_group=GMedia`select`[]Proxies`[]DIRECT
+custom_proxy_group=Google`select`[]Proxies`[]DIRECT
 custom_proxy_group=Disney`select`[]香港`[]台湾`[]美国`[]新加坡
 custom_proxy_group=Netflix`select`[]香港`[]台湾`[]美国`[]新加坡
-custom_proxy_group=Telegram`select`[]香港`[]台湾
 custom_proxy_group=PayPal`select`[]美国`[]DIRECT
+custom_proxy_group=Telegram`select`[]香港`[]台湾
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
