--- a/Rules.ini
+++ b/Rules.ini
@@ -1,20 +1,20 @@
 ;设置规则标志位
-ruleset=DIRECT,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/LAN.list
-ruleset=DIRECT,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Download.list
-ruleset=AdBlock,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/AdBlock.list
-ruleset=Apple,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Apple.list
-ruleset=Steam,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Steam.list
-ruleset=CMedia,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/CMedia.list
-ruleset=Domestic,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Domestic.list
-ruleset=Microsoft,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Microsoft.list
-ruleset=Speedtest,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Speedtest.list
-ruleset=Telegram,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Telegram.list
-ruleset=PayPal,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/PayPal.list
-ruleset=Google,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Google.list
-ruleset=Disney,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Disney.list
-ruleset=Netflix,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Netflix.list
-ruleset=GMedia,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/GMedia.list
-ruleset=Proxies,https://cdn.jsdelivr.net/gh/iduorami/Clash@master/Ruleset/Proxy.list
+ruleset=DIRECT,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/LAN.list
+ruleset=DIRECT,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Download.list
+ruleset=AdBlock,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/AdBlock.list
+ruleset=Apple,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Apple.list
+ruleset=Steam,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Steam.list
+ruleset=CMedia,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/CMedia.list
+ruleset=Domestic,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Domestic.list
+ruleset=Microsoft,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Microsoft.list
+ruleset=Speedtest,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Speedtest.list
+ruleset=Telegram,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Telegram.list
+ruleset=PayPal,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/PayPal.list
+ruleset=Google,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Google.list
+ruleset=Disney,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Disney.list
+ruleset=Netflix,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Netflix.list
+ruleset=GMedia,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/GMedia.list
+ruleset=Proxies,https://raw.githubusercontent.com/iduorami/Clash/master/Ruleset/Proxy.list
 ruleset=Domestic,[]GEOIP,CN
 ruleset=Others,[]MATCH
 ;设置规则标志位
