--- a/Rule.ini
+++ b/Rule.ini
@@ -20,24 +20,24 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`.*
+custom_proxy_group=Proxies`select`[]香港`[]日本`.*
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Others`select`[]DIRECT`[]Proxies
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=Apple`select`[]DIRECT`[]Proxies
 custom_proxy_group=CMedia`select`[]DIRECT`[]Proxies
-custom_proxy_group=GMedia`select`[]Proxies`[]DIRECT
-custom_proxy_group=Google`select`[]Proxies`[]DIRECT
-custom_proxy_group=Disney`select`[]Proxies`[]DIRECT
-custom_proxy_group=Netflix`select`[]Proxies`[]DIRECT
-custom_proxy_group=PayPal`select`[]Proxies`[]DIRECT
-custom_proxy_group=Telegram`select`[]Proxies`[]DIRECT
+custom_proxy_group=GMedia`select`[]香港`[]台湾`[]Proxies
+custom_proxy_group=Google`select`[]香港`[]日本`[]Proxies
+custom_proxy_group=Disney`select`[]香港`[]新加坡`[]Proxies
+custom_proxy_group=Netflix`select`[]香港`[]新加坡`[]Proxies
+custom_proxy_group=PayPal`select`[]美国`[]Proxies
+custom_proxy_group=Telegram`select`[]香港`[]Proxies
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
-;custom_proxy_group=香港`select`(香港)
-;custom_proxy_group=台湾`select`(台湾)
-;custom_proxy_group=日本`select`(日本)
-;custom_proxy_group=美国`select`(美国)
-;custom_proxy_group=新加坡`select`(新加坡)
+custom_proxy_group=香港`select`(香港)
+custom_proxy_group=台湾`select`(台湾)
+custom_proxy_group=日本`select`(日本)
+custom_proxy_group=美国`select`(美国)
+custom_proxy_group=新加坡`select`(新加坡)
 ;设置分组标志位
