--- a/Rule.ini
+++ b/Rule.ini
@@ -35,9 +35,9 @@ custom_proxy_group=Telegram`select`[]香港`[]Proxies
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
-custom_proxy_group=香港`select`(香港)
-custom_proxy_group=台湾`select`(台湾)
-custom_proxy_group=日本`select`(日本)
-custom_proxy_group=美国`select`(美国)
-custom_proxy_group=新加坡`select`(新加坡)
+custom_proxy_group=香港`select`(HK)
+custom_proxy_group=台湾`select`(TW)
+custom_proxy_group=日本`select`(JP)
+custom_proxy_group=美国`select`(US)
+custom_proxy_group=新加坡`select`(SG)
 ;设置分组标志位
