--- a/Rule.ini
+++ b/Rule.ini
@@ -35,7 +35,7 @@ custom_proxy_group=Telegram`select`[]香港`[]Proxies
 custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
-custom_proxy_group=香港`select`(HK)
+custom_proxy_group=香港`select`(^((?!专线).)*HK((?!专线).)*$)
 custom_proxy_group=台湾`select`(TW)
 custom_proxy_group=日本`select`(JP)
 custom_proxy_group=美国`select`(US)
