--- a/Rule.ini
+++ b/Rule.ini
@@ -36,8 +36,8 @@ custom_proxy_group=Steam`select`[]DIRECT`[]Proxies
 custom_proxy_group=Speedtest`select`[]DIRECT`[]Proxies
 custom_proxy_group=Microsoft`select`[]DIRECT`[]Proxies
 custom_proxy_group=香港`select`(^((?!专线).)*HK((?!专线).)*$)
-custom_proxy_group=台湾`select`(TW)
-custom_proxy_group=日本`select`(JP)
-custom_proxy_group=美国`select`(US)
-custom_proxy_group=新加坡`select`(SG)
+custom_proxy_group=台湾`select`(^((?!专线).)*TW((?!专线).)*$)
+custom_proxy_group=日本`select`(^((?!专线).)*JP((?!专线).)*$)
+custom_proxy_group=美国`select`(^((?!专线).)*US((?!专线).)*$)
+custom_proxy_group=新加坡`select`(^((?!专线).)*SG((?!专线).)*$)
 ;设置分组标志位
