--- a/Rule.ini
+++ b/Rule.ini
@@ -20,7 +20,7 @@ ruleset=Others,[]MATCH
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=Proxies`select`[]香港`[]日本`.*
+custom_proxy_group=Proxies`select`[]香港`.*
 custom_proxy_group=Domestic`select`[]DIRECT`[]Proxies
 custom_proxy_group=Others`select`[]DIRECT`[]Proxies
 custom_proxy_group=AdBlock`select`[]REJECT`[]DIRECT
